#60 login theme fixes

--- a/applications/accounts/themes/custom/login/messages/messages_en.properties
+++ b/applications/accounts/themes/custom/login/messages/messages_en.properties
@@ -1,4 +1,4 @@
-doLogIn=Log in via ORCID
+doLogIn=Log in
 doRegister=Register
 doCancel=Cancel
 doSubmit=Submit
@@ -22,7 +22,7 @@ kerberosNotConfiguredTitle=Kerberos Not Configured
 bypassKerberosDetail=Either you are not logged in by Kerberos or your browser is not set up for Kerberos login.  Please click continue to login in through other means
 kerberosNotSetUp=Kerberos is not set up.  You cannot login.
 registerTitle=Create my account
-loginAccountTitle=Connect to your Antibody Registry account
+loginAccountTitle=Log in to the Antibody Registry
 loginTitle=Sign in to {0}
 loginTitleHtml={0}
 impersonateTitle={0} Impersonate User
