--- a/applications/accounts/themes/custom/login/messages/messages_en.properties
+++ b/applications/accounts/themes/custom/login/messages/messages_en.properties
@@ -193,7 +193,7 @@ client_broker=Broker
 
 requiredFields=Required fields
 
-invalidUserMessage=Invalid username or password.
+invalidUserMessage=Invalid username or password. If you signed up on the former version of the system or simply forgot your password, you can reset your password by clicking the Forgot Password link below.
 invalidUsernameMessage=Invalid username.
 invalidUsernameOrEmailMessage=Invalid username or email.
 invalidPasswordMessage=Invalid password.
